fixed review comments - test not done yet
